--- a/app/assets/stylesheets/modules/_variables.sass
+++ b/app/assets/stylesheets/modules/_variables.sass
@@ -1,5 +1,6 @@
 $sans: "Zirkon", sans-serif
 $serif: "Suisse Works", serif
+$mono: "America Mono", monospace
 
 $small: 640px
 $medium: 920px
@@ -23,7 +24,7 @@ $gutter: 4rem
 
   --default: #fafafa
   --white: #ffffff
-  --faint: #eee
+  --faint: #f6f6f6
   --grey: #999
   --black: #070707
 
