--- a/app/assets/stylesheets/shared/_block.sass
+++ b/app/assets/stylesheets/shared/_block.sass
@@ -29,7 +29,7 @@
     background-color: var(--default)
   &.-bg-faint
     color: var(--black)
-    background-color: rgba(#ccc,0.175)
+    background-color: var(--faint)
   &.-bg-image
     background-size: cover
     background-position: center
