--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -2,13 +2,12 @@
 - noindex true
 
 .wrapper.-small{role: 'layout'}
-  %header.block.-mt4.-mb2
-    %h2.h.-h2.-centered Manage account
+  %header.page-header
+    %h1.h.-h2 Manage account
 
-  .block.-mt4
-    %h2.h.-h4.-centered Account details
-
-  .block.-b.-p1.-my2
+  .block.-b.-p2.-my2.-bg-faint
+    .block.-pb1.-bb.-mb2
+      %h3.c.-w8 Account details
     .p.-t4
       %ul.list
         %li.block.-mb1
@@ -23,14 +22,13 @@
 
   - if current_user.subscription
     - cache ['user/show', current_user, 'subscription', current_user.subscription] do
-      .block.-mt4
-        %h2.h.-h4.-centered Subscription details
-
-      .block.-b.-p1.-my2
+      .block.-b.-p2.-my2.-bg-faint
+        .block.-pb1.-bb.-mb2
+          %h3.c.-w8 Subscription details
         .p.-t4
           %ul.list
             %li.block.-mb1
-              %label.c.-w8 Subscription plan
+              %label.c.-w8 Plan
               %p
                 - if current_user.subscription.plan.is_friend?
                   #{ 'Friend' }:
@@ -39,52 +37,50 @@
                 - else
                   #{ current_user.subscription.plan.product.name }:
 
-                %code #{ number_to_currency((current_user.subscription.plan.amount/100.0), unit: '€') }/#{ current_user.subscription.plan.interval }
+                #{ number_to_currency((current_user.subscription.plan.amount/100.0), unit: '€') }/#{ current_user.subscription.plan.interval }
 
             %li.block.-mb1
               %label.c.-w8 Next billing date
               - if current_user.subscription.current_period_ends_at.present?
-                %p <code>#{ current_user.subscription.current_period_ends_at.strftime('%-d %B') }</code>
+                %p #{ current_user.subscription.current_period_ends_at.strftime('%-d %B') }
 
-- if current_user.requires_address?
-  .box
-    %header.-box
-      %h3.heading Shipping address
-    %div
-      = raw current_user.address_lines.join('<br>')
+            - if current_user.requires_address?
+              %li.block.-mb1
+                %label.c.-w8 Shipping address
+                %p= raw current_user.address_lines.join('<br>')
 
-- if current_user.subscription && current_user.subscriber?
-  - cache ['user/show', current_user, 'payment', current_user.subscription] do
-    .box
-      %header.-box
-        %h3.heading Payment method
-      %div
-        - if current_user.stripe_default_source.present?
-          %p
-            #{ current_user.stripe_default_source['brand'] }
-          %code #{ '···· ' * 3 }#{ current_user.stripe_default_source['last4'] } (Expires #{ current_user.stripe_default_source['exp_month'].to_s.rjust(2, '0') }/#{ current_user.stripe_default_source['exp_year'] })
-        - else
-          :markdown
-            We don't have a working payment method on file for you. Can you supply one?
+            - if current_user.subscription && current_user.subscriber?
+              - cache ['user/show', current_user, 'payment', current_user.subscription] do
+                %li.block.-mb1
+                  %label.c.-w8 Payment method
+                  - if current_user.stripe_default_source.present?
+                    %p
+                      #{ current_user.stripe_default_source['brand'] }:
+                      #{ '···· ' * 3 }#{ current_user.stripe_default_source['last4'] } &nbsp;
+                      (Expires #{ current_user.stripe_default_source['exp_month'].to_s.rjust(2, '0') }/#{ current_user.stripe_default_source['exp_year'] })
+                  - else
+                    :markdown
+                      We don't have a working payment method on file for you. Can you supply one?
 
-- if @invoices.any?
-  .box
-    %header.-box
-      %h3.heading Invoices
-    %div
-      %ol.list
-        - @invoices.each do |invoice|
-          %li= link_to invoice.display_name, invoice, target: "_blank"
+  - if @invoices.any?
+    - cache ['user/show', current_user, 'invoices', @invoices] do
+      .block.-b.-p2.-my2.-bg-faint
+        .block.-pb1.-bb.-mb2
+          %h3.c.-w8 Invoices
+        .p.-t4
+          %ol.list
+            - @invoices.each do |invoice|
+              %li= link_to invoice.display_name, invoice, target: "_blank"
 
-.block.-my4.-py4
-  .p.-t4.-sf.-centered
-    %h3.c.-w8 Account options
-    %ul
-      %li= link_to "Change account details", [:edit, :user]
-      - if current_user.subscription && current_user.subscriber?
-        %li= link_to "Change payment method", [:payment, :user]
-        - if current_user.subscription.changeable?
-          %li= link_to "Change subscription plan", [:subscription, :user]
-        - if current_user.subscription.requires_address?
-          %li= link_to "Change subscription address", [:address, :user]
-      %li= link_to "Log out", :user_session, method: :delete
+  .block.-my4.-py4
+    .p.-t4.-sf.-centered
+      %h3.c.-w8 Account options
+      %ul
+        %li= link_to "Change account details", [:edit, :user]
+        - if current_user.subscription && current_user.subscriber?
+          - if current_user.subscription.changeable?
+            %li= link_to "Change subscription plan", [:subscription, :user]
+          - if current_user.subscription.requires_address?
+            %li= link_to "Change subscription address", [:address, :user]
+          %li= link_to "Update payment method", [:payment, :user]
+        %li= link_to "Log out", :user_session, method: :delete
