--- a/app/assets/stylesheets/layouts/_overlay.sass
+++ b/app/assets/stylesheets/layouts/_overlay.sass
@@ -4,7 +4,6 @@
   right: 0
   top: 0
   bottom: 0
-  background-color: var(--default)
   z-index: 9999
   display: flex
   flex-direction: column
@@ -12,11 +11,10 @@
   align-items: stretch
   padding-top: 0.75rem
   overflow-y: auto
+  background-color: rgba(#000,0.875)
 
   & > .content
     position: absolute
     bottom: 0
     left: 0
     right: 0
-
-  & > .footer
