--- a/app/assets/stylesheets/modules/_fonts.sass
+++ b/app/assets/stylesheets/modules/_fonts.sass
@@ -97,3 +97,12 @@
   src: url('https://d1trxack2ykyus.cloudfront.net/fonts/SuisseWorks-BoldItalic-WebXL.woff2') format('woff2')
   font-style: italic
   font-weight: 800
+
+
+// America Mono
+
+@font-face
+  font-family: "America Mono"
+  src: url('https://d1trxack2ykyus.cloudfront.net/fonts/GT-America-Mono-Regular.woff2') format('woff2')
+  font-style: normal
+  font-weight: 400
