--- a/app/views/layouts/_primary-footer.html.haml
+++ b/app/views/layouts/_primary-footer.html.haml
@@ -15,7 +15,7 @@
           .block.-mb4.p.-sf
             %p
               %big.c.-w4 Managing editor
-              = link_to "Lois Kaplia", "/contributors/lois-kapila"
+              = link_to "Lois Kapila", "/contributors/lois-kapila"
             %p
               %big.c.-w4 Deputy editor
               = link_to "Sam Tranum", "/contributors/sam-tranum"
