starting on gift subs

--- a/app/assets/stylesheets/shared/_text.sass
+++ b/app/assets/stylesheets/shared/_text.sass
@@ -20,10 +20,11 @@
   &.-grey
     color: var(--grey)
 
-    a, a:link, a:visited
-      color: var(--grey)
-      font-weight: 800
-      border-color: var(--grey)
+    &.-sf
+      a, a:link, a:visited
+        color: var(--grey)
+        font-weight: 400
+        border-color: var(--grey)
 
 .a
   &.-elsewhere
