--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -1,6 +1,6 @@
 .wrapper.-small{role: 'layout'}
-  %header.block.-mt4.-mb2
-    %h2.h.-h2.-centered
+  %header.page-header
+    %h1.h.-h2
       - if @plan.is_base_plan?
         #{ @plan.product.name }
       - elsif @plan.is_friend?
@@ -10,118 +10,120 @@
       - else # discount
         #{ @plan.product.name }
 
-    .p.-t3.-sf.-centered
+    .block.-mt2.p.-t3.-sf.-centered
       - if @landing_page
-        .block.-mt2
-          :markdown
-            As a special offer, subscribe now and you'll receive a **free month** of digital access to **DublinInquirer.com**, including our full archive, optimised for desktop and mobile.
+        :markdown
+          As a special offer, subscribe now and you'll receive a **free month** of digital access to **DublinInquirer.com**, including our full archive, optimised for desktop and mobile.
 
       - elsif @subscription.requires_address?
-        .block.-mt2
+        :markdown
+          **Monthly print edition** featuring a selection of our favourite online articles delivered to your door, in addition to unlimited **digital access**, including our full archive.
+        - if @plan.is_friend? or @plan.is_patron?
           :markdown
-            **Monthly print edition** featuring a selection of our favourite online articles delivered to your door, in addition to unlimited **digital access**, including our full archive.
-          - if @plan.is_friend? or @plan.is_patron?
-            :markdown
-              Thank you so much for your generosity in supporting us. We depend on readers like you.
+            Thank you so much for your generosity in supporting us. We depend on readers like you.
 
       - else
-        .block.-mt2
-          :markdown
-            Unlimited digital access to **DublinInquirer.com**, including our full archive, optimised for desktop and mobile.
+        :markdown
+          Unlimited digital access to **DublinInquirer.com**, including our full archive, optimised for desktop and mobile.
 
-  .block.-my4.p.-t3
-    = form_for @subscription, url: subscriptions_path, method: :post, html: {class: 'subscription-form', data: {'fonts-url': asset_url('fonts.css')}} do |f|
-      .error{style: 'display:none;'}
-        .message &nbsp;
-      - if @user && @user.errors.any?
-        %ul.modal-form_errors
-          - @user.errors.full_messages.each do |message|
-            %li= message
+  = form_for @subscription, url: subscriptions_path, method: :post, html: {class: 'subscription-form', data: {'fonts-url': asset_url('fonts.css')}} do |f|
 
-      = f.hidden_field :landing_page_slug
+    = f.hidden_field :plan_id
+    = f.hidden_field :landing_page_slug
 
-      .block.-mt4.-mb2.p.-t3.-centered
-        %h3.c.-w8 Subscriber details
-
-      .box-form.block.-b
+    .block.-form
+      .block.-b.-p2.-my2.-bg-faint
+        .block.-mb2.-pb1.-bb
+          %h3.c.-w8 Account details
 
         .field
-          = f.label :given_name, 'Name'
           .twofer
-            = f.text_field :given_name, placeholder: 'First'
-            = f.text_field :surname, placeholder: 'Surname'
+            .field
+              = f.label :given_name, 'First name'
+              = f.text_field :given_name, placeholder: 'First'
+              = render_errors_for(@subscription, :given_name)
+            .field
+              = f.label :surname, 'Surname'
+              = f.text_field :surname, placeholder: 'Surname'
+              = render_errors_for(@subscription, :surname)
 
         - if !(@subscription.user.present? && @subscription.user.persisted?)
           .field
             = f.label :email_address
             = f.email_field :email_address, placeholder: 'aoife@example.ie'
+            = render_errors_for(@subscription.user, :email_address)
 
           .field
             = f.label :password
             = f.password_field :password, placeholder: 'password123'
+            = render_errors_for(@subscription.user, :password)
 
       - if @subscription.requires_address?
-        .block.-mt4.-mb2.p.-t3.-centered
-          %h3.c.-w8.-centered Subscription address
+        .block.-b.-p2.-my2.-bg-faint
+          .block.-mb2.-pb1.-bb
+            %h3.c.-w8 Subscription address
 
-        .box-form.block.-b
           .field
             = f.label :address_line_1
             = f.text_field :address_line_1
+            = render_errors_for(@subscription, :address_line_1)
           .field
             = f.label :address_line_2
             = f.text_field :address_line_2
+            = render_errors_for(@subscription, :address_line_2)
           .field
             = f.label :city
             = f.text_field :city
+            = render_errors_for(@subscription, :city)
           .field.twofer
             .field
               = f.label :county
               = f.text_field :county
+              = render_errors_for(@subscription, :county)
             .field
               = f.label :post_code
               = f.text_field :post_code
+              = render_errors_for(@subscription, :post_code)
           .field.-select
             = f.label :country_code, 'Country'
             = f.country_select :country_code, priority_countries: ["IE", "GB"], priority_countries_divider: "-"
+            = render_errors_for(@subscription, :country_code)
 
-      .block.-mt4.-mb2.p.-t3.-centered
-        %h3.c.-w8 Credit/debit card details
+      .block.-b.-p2.-my2.-bg-faint
+        .block.-mb2.-pb1.-bb
+          %h3.c.-w8 Credit/debit card details
 
-        - if @landing_page
-          .text.-tiny
-            :markdown
-              You won't be charged until your free month elapses on #{ @subscription.trial_ends_at.strftime('%-d %B %Y') }.
+          - if @landing_page
+            .text.-tiny
+              :markdown
+                You won't be charged until your free month elapses on #{ @subscription.trial_ends_at.strftime('%-d %B %Y') }.
 
-      .box-form.block.-b
         .field
           %label Card number
-          #stripe-form_card-number.field.empty
+          #stripe-form_card-number
 
-        .twofer
+        .field.twofer
           .field
             %label Expiration date
-            #stripe-form_card-expiry.field.empty
+            #stripe-form_card-expiry
           .field
             %label Security code
-            #stripe-form_card-cvc.field.empty
+            #stripe-form_card-cvc
 
-      .block.-my4.p.-centered.-pb4
-        = f.hidden_field :plan_id
+      %nav.block.-mt2.actions
+        = f.submit 'Subscribe', class: 'button -standard -big'
 
-        .p.-t4
-          - if @landing_page
-            %ul.list.-nav
-              %li #{ number_to_currency((@plan.amount/100.0), unit: '€') } billed monthly beginning on #{ @subscription.trial_ends_at.strftime('%-d %B %Y') }
-              %li Cancel any time
-          - else
-            %ul.list.-nav
-              %li #{ number_to_currency((@plan.amount/100.0), unit: '€') } billed monthly
-              %li Subscription renews automatically
-              %li Cancel any time
-
-        .block.-mt2.-mb4
-          = f.submit 'Subscribe', class: 'button -standard -big'
+  .block.-my4.-pb4
+    .p.-t4.-sf.-centered
+      - if @landing_page
+        %ul.list.-nav
+          %li #{ number_to_currency((@plan.amount/100.0), unit: '€') } billed monthly beginning on #{ @subscription.trial_ends_at.strftime('%-d %B %Y') }
+          %li Cancel any time
+      - else
+        %ul.list.-nav
+          %li #{ number_to_currency((@plan.amount/100.0), unit: '€') } billed monthly
+          %li Subscriptions renew automatically
+          %li Cancel any time
 
 :javascript
   fbq('track', 'InitiateCheckout', {
