--- a/app/views/forms/_errors.html.haml
+++ b/app/views/forms/_errors.html.haml
@@ -1,2 +1,2 @@
-- if record.errors[attribute.to_sym].any?
+- if record && record.errors[attribute.to_sym].any?
   .error #{ record.errors[attribute.to_sym].first }.
