--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -10,7 +10,8 @@
       - else # discount
         #{ @plan.product.name }
 
-    .block.-mt2.p.-t3.-sf.-centered
+  .block.-mb4
+    .p.-t3.-sf
       - if @landing_page
         :markdown
           As a special offer, subscribe now and you'll receive a **free month** of digital access to **DublinInquirer.com**, including our full archive, optimised for desktop and mobile.
@@ -91,7 +92,7 @@
 
       .block.-b.-p2.-my2.-bg-faint
         .block.-mb2.-pb1.-bb
-          %h3.c.-w8 Credit/debit card details
+          %h3.c.-w8 Payment details
 
           - if @landing_page
             .text.-tiny
