--- a/app/views/gift_subscriptions/show.html.haml
+++ b/app/views/gift_subscriptions/show.html.haml
@@ -1,6 +1,3 @@
-- content_for :breadcrumbs do
-  .current Give a subscription
-
 :coffeescript
   $ ->
     $('[data-action="submitForm"]').on 'click', (e) ->
@@ -8,133 +5,117 @@
       $(e.currentTarget).attr('data-action', '')
       $(e.currentTarget).parents('form:first').submit()
 
-%header.header.-modal
-  %h1.heading Give a subscription
+.wrapper.-small{role: 'layout'}
+  %header.page-header
+    %h1.h.-h2 Give a subscription
 
-  .text.-article
-    - if @gift_subscription.requires_address?
-      :markdown
-        **Monthly print edition** featuring a selection of our favourite online articles delivered to your door, and unlimited **digital access** for #{ pluralize @gift_subscription.duration, 'month' }.
-    - else
-      :markdown
-        Unlimited digital access to **DublinInquirer.com**, including our full archive, optimised for desktop and mobile for #{ pluralize @gift_subscription.duration, 'month' }.
+  .block.-mb4
+    .p.-t3.-sf
+      - if @gift_subscription.requires_address?
+        :markdown
+          **Monthly print edition** featuring a selection of our favourite online articles delivered to your door, and unlimited **digital access** for #{ pluralize @gift_subscription.duration, 'month' }.
+      - else
+        :markdown
+          Unlimited digital access to **DublinInquirer.com**, including our full archive, optimised for desktop and mobile for #{ pluralize @gift_subscription.duration, 'month' }.
 
-= form_for @gift_subscription, url: gift_subscriptions_path, method: :post, html: {class: 'subscription-form', data: {'fonts-url': asset_url('fonts.css')}} do |f|
+  = form_for @gift_subscription, url: gift_subscriptions_path, method: :post, html: {class: 'subscription-form', data: {'fonts-url': asset_url('fonts.css')}} do |f|
+    = f.hidden_field :plan_id
+    = f.hidden_field :duration
 
-  .error{style: 'display:none;'}
-    .message &nbsp;
+    .block.-form
+      .block.-b.-p2.-my2.-bg-faint
+        .block.-mb2.-pb1.-bb
+          %h3.c.-w8 Your details
 
-  - if @gift_subscription.errors.any?
-    %ul.modal-form_errors
-      - @gift_subscription.errors.full_messages.each do |message|
-        %li= message
-
-  .box.-tight
-    %header.header.-box.-tight
-      %h2.heading Your details
-
-    .box-form
-      .field
-        = f.label :giver_given_name, 'Your name'
-        .twofer
-          = f.text_field :giver_given_name, placeholder: 'First'
-          = f.text_field :giver_surname, placeholder: 'Surname'
-
-      .field
-        = f.label :giver_email_address, 'Your email address'
-        = f.email_field :giver_email_address, placeholder: 'sean@example.ie'
-
-  .box.-tight
-    %header.header.-box.-tight
-      %h2.heading Recipient&rsquo;s details
-
-    .box-form
-      .field
-        = f.label :recipient_given_name, 'Name'
-        .twofer
-          = f.text_field :recipient_given_name, placeholder: 'First'
-          = f.text_field :recipient_surname, placeholder: 'Surname'
-
-      .field
-        = f.label :recipient_email_address, 'Email address'
-        = f.email_field :recipient_email_address, placeholder: 'sean@example.ie'
-
-  - if @gift_subscription.requires_address?
-    .box.-tight
-      %header.header.-box.-tight
-        %h2.heading Subscription address
-      .box-form
         .field
-          = f.label :recipient_address_line_1, 'Address line 1'
-          = f.text_field :recipient_address_line_1
+          = f.label :giver_given_name, 'Your name'
+          .twofer
+            = f.text_field :giver_given_name, placeholder: 'First'
+            = f.text_field :giver_surname, placeholder: 'Surname'
+            = render_errors_for(@gift_subscription, :giver_surname)
+
         .field
-          = f.label :recipient_address_line_2, 'Address line 2'
-          = f.text_field :recipient_address_line_2
+          = f.label :giver_email_address, 'Your email address'
+          = f.email_field :giver_email_address, placeholder: 'sean@example.ie'
+          = render_errors_for(@gift_subscription, :giver_email_address)
+
+      .block.-b.-p2.-my2.-bg-faint
+        .block.-mb2.-pb1.-bb
+          %h3.c.-w8 Recipient&rsquo;s details
+
         .field
-          = f.label :recipient_city, 'City'
-          = f.text_field :recipient_city
+          = f.label :recipient_given_name, 'Name'
+          .twofer
+            = f.text_field :recipient_given_name, placeholder: 'First'
+            = f.text_field :recipient_surname, placeholder: 'Surname'
+            = render_errors_for(@gift_subscription, :recipient_surname)
+
+        .field
+          = f.label :recipient_email_address, 'Email address'
+          = f.email_field :recipient_email_address, placeholder: 'sean@example.ie'
+          = render_errors_for(@gift_subscription, :recipient_email_address)
+
+      - if @gift_subscription.requires_address?
+        .block.-b.-p2.-my2.-bg-faint
+          .block.-mb2.-pb1.-bb
+            %h3.c.-w8 Subscription address
+
+          .field
+            = f.label :recipient_address_line_1, 'Address line 1'
+            = f.text_field :recipient_address_line_1
+            = render_errors_for(@gift_subscription, :recipient_address_line_1)
+          .field
+            = f.label :recipient_address_line_2, 'Address line 2'
+            = f.text_field :recipient_address_line_2
+            = render_errors_for(@gift_subscription, :recipient_address_line_2)
+          .field
+            = f.label :recipient_city, 'City'
+            = f.text_field :recipient_city
+            = render_errors_for(@gift_subscription, :recipient_city)
+          .field.twofer
+            .field
+              = f.label :recipient_county, 'County'
+              = f.text_field :recipient_county
+              = render_errors_for(@gift_subscription, :recipient_county)
+            .field
+              = f.label :recipient_post_code, 'Post code'
+              = f.text_field :recipient_post_code
+              = render_errors_for(@gift_subscription, :recipient_post_code)
+          .field.-select
+            = f.label :recipient_country_code, 'Country'
+            = f.country_select :recipient_country_code, priority_countries: ["IE", "GB"], priority_countries_divider: "-"
+            = render_errors_for(@gift_subscription, :recipient_country_code)
+
+      .block.-b.-p2.-my2.-bg-faint
+        .block.-mb2.-pb1.-bb
+          %h3.c.-w8 Payment details
+
+        .field
+          %label Card number
+          #stripe-form_card-number
+
         .field.twofer
           .field
-            = f.label :recipient_county, 'County'
-            = f.text_field :recipient_county
+            %label Expiration date
+            #stripe-form_card-expiry
           .field
-            = f.label :recipient_post_code, 'Post code'
-            = f.text_field :recipient_post_code
-        .field.-select
-          = f.label :recipient_country_code, 'Country'
-          = f.country_select :recipient_country_code, priority_countries: ["IE", "GB"], priority_countries_divider: "-"
+            %label Security code
+            #stripe-form_card-cvc
 
-  - if Date.current < Date.new(2018,12,18)
-    .box.-padded-v
-      .box.-padded.-apart
-        .subheader
-          %h2.subheader_title First shipment address
-          - if @gift_subscription.requires_address?
-            :markdown
-              We'll post you out a card and the latest issue so you'll have something to give on the day. Where should we send them?
-          - else
-            :markdown
-              We'll post you out a little card so you'll have something to give on the day. Where should we send it?
+      %nav.block.-mt2.actions
+        = f.submit raw("Purchase &mdash; #{ number_to_currency((@gift_subscription.price/100.0), unit: '€').gsub('.00','') }"), class: 'button -standard -big'
 
-        .box.-padded-v
-          .modal-form_fields
-            .modal-form_field
-              = f.text_field :first_address_line_1, placeholder: 'Address line 1'
-            .modal-form_field
-              = f.text_field :first_address_line_2, placeholder: 'Address line 2'
-            .modal-form_field
-              = f.text_field :first_city, placeholder: 'City'
-            .modal-form_field
-              .twofer
-                = f.text_field :first_county, placeholder: 'County'
-                = f.text_field :first_post_code, placeholder: 'Postcode'
-            .modal-form_field
-              = f.label :first_country_code, 'Country'
-              = f.country_select :first_country_code, priority_countries: ["IE", "GB"], priority_countries_divider: "-"
+  .block.-my4.-pb4
+    %hr.-separator
+    .block.-mt4.p.-t4.-sf.-centered
+      :markdown
+        **Questions?**
 
-  .box.-tight
-    %header.header.-box.-tight
-      %h2.heading Payment details
+        If you have any questions or special requests, you can reach us at: <a href="mailto:info@dublininquirer.com">info@dublininquirer.com</a>.
 
-    .box-form
-      .field
-        %label Card number
-        #stripe-form_card-number.field.empty
+:javascript
+  fbq('track', 'InitiateCheckout', {
+    value: #{ ((@gift_subscription.try(:price)/100.0) * 12).round },
+    currency: 'EUR',
+  });
 
-      .twofer
-        .field
-          %label Expiration date
-          #stripe-form_card-expiry.field.empty
-        .field
-          %label Security code
-          #stripe-form_card-cvc.field.empty
-
-  .box.-tight.-horizontal
-    %div.content
-      = f.hidden_field :plan_id
-      = f.hidden_field :duration
-
-    %div.actions
-      %a{'data-action': 'submitForm', class: 'button -price'}
-        %span Confirm & pay
-        %span.figure #{number_to_currency((@gift_subscription.price/100.0), unit: '€', precision: 0)}
