--- a/app/views/comments/_comment.html.haml
+++ b/app/views/comments/_comment.html.haml
@@ -1,12 +1,12 @@
 - cache [comment, 'partial'] do
-  .box.-oh
-    %header.-box
-      %a.anchor{id: "comment-#{ comment.id }"}
-      .meta
-        .name= comment.display_name
-        .date= comment.created_at.strftime('%e %B at %H:%M')
-    .content
-      .text.p.-serif
+  .block.-b.-p2.-my2
+    .block.-mb2.-pb1.-bb
+      %h3.c.-w4{id: "comment-#{ comment.id }"}
+        .inline.c.-w8 #{ comment.display_name }
+        .inline at #{ comment.created_at.strftime('%e %B at %H:%M') }
+
+    .block
+      .p.-t3.c.-serif
         - if comment.parent.present?
           :markdown
             #{ link_to "@#{ comment.parent.display_name }", "#comment-#{ comment.parent.id }" }:
