--- a/app/views/comments/submitted.js.erb
+++ b/app/views/comments/submitted.js.erb
@@ -1,1 +1,1 @@
-$(".submitted-overlay").show()
+$("#new_comment").html('<div class="block -b -py4 -my2 -bg-faint"><div class="p -sf -centered">Your response is in moderation.</div></div>')
